--- a/Window/createscreen/create.html
+++ b/Window/createscreen/create.html
@@ -21,7 +21,7 @@
         <br>
         <br>
         <div>
-        <p class ='directions'>Subject</p>
+        <h3 class ='directions'>Subjects</h3>
         <input type="checkbox">
         <label>Math</label>
         <input type="checkbox">
@@ -63,6 +63,9 @@
                 <ion-icon name="add-circle-outline"></ion-icon>
             </span>
         </button>
+        </div>
+        <div>
+            <h1>To-Do-List</h1>
         </div>
 <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
