--- a/Window/supportscreen/support.html
+++ b/Window/supportscreen/support.html
@@ -5,13 +5,38 @@
         <link rel="stylesheet" href="support.css">
     </head>
     <body>
-        <h1 class="title">Support Us</h1>
-        <div class="navbar3">
-            <ul>
-                <li><a onclick = "window.location.href='http://127.0.0.1:5500/Window/homescreen/home.html'">Home</a></li>
-                <li><a onclick = "window.location.href= 'http://127.0.0.1:5500/Window/createscreen/create.html'">Create</a></li>
-                <li><a onclick = "window.location.href='http://127.0.0.1:5500/Window/supportscreen/support.html'">Support</a></li>
-            </ul>
+        <div>
+            <div class="navbar3">
+                <ul>
+                    <h1 class="title">Support Us</h1>
+                    <li><a onclick = "window.location.href='http://127.0.0.1:5500/Window/homescreen/home.html'">Home</a></li>
+                    <li><a onclick = "window.location.href= 'http://127.0.0.1:5500/Window/createscreen/create.html'">Create</a></li>
+                    <li><a onclick = "window.location.href='http://127.0.0.1:5500/Window/supportscreen/support.html'">Support</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="info">
+            <h2 class="directiontext">Send us feedback on what we can improve on to make this app your personal reminder</h2>
+            <textarea placeholder='Suggest Here'></textarea>
+            <br>
+            <button class="submitbutton">Submit</button>
+        </div>
+        <br>
+        <div class='footer-container'>
+            <div class='footer'>
+                <div class='footer-heading footer-1'>
+                    <h2> Contacts </h2>
+                    <a href="#">Phone: 626-525-9722</a>
+                    <a href="#">Email: gavinlai07@gmail.com</a>
+                    <a href="#">Snapchat: gavinlai999</a>
+                </div>
+                <div class='footer-heading footer-2'>
+                    <h2>Social Media</h2>
+                    <a href='https://www.instagram.com/gavinlai999/'>Instagram</a>
+                    <a href="https://www.facebook.com/gavin.lai.7399">Facebook</a>
+                    <a href="https://www.tiktok.com/@gavinlai999">TikTok</a>
+                </div>
+            </div>
         </div>
     </body>
 </html>
