--- a/Window/homescreen/home.html
+++ b/Window/homescreen/home.html
@@ -5,15 +5,34 @@
         <link rel="stylesheet" href="home.css">
     </head>
     <body>
-        <h1 class="title">HW Helper</h1>
-        <div class="navbar">
-            <ul>
-                <li><a onclick = "window.location.href='http://127.0.0.1:5500/Window/homescreen/home.html'">Home</a></li>
-                <li><a onclick = "window.location.href= 'http://127.0.0.1:5500/Window/createscreen/create.html'">Create</a></li>
-                <li><a onclick = "window.location.href='http://127.0.0.1:5500/Window/supportscreen/support.html'">Support</a></li>
-            </ul>
+        <div class="position">
+            <div class="navbar">
+                <ul>
+                    <h1 class="title">HW Helper</h1>
+                    <li><a onclick = "window.location.href='http://127.0.0.1:5500/Window/homescreen/home.html'">Home</a></li>
+                    <li><a onclick = "window.location.href= 'http://127.0.0.1:5500/Window/createscreen/create.html'">Create</a></li>
+                    <li><a onclick = "window.location.href='http://127.0.0.1:5500/Window/supportscreen/support.html'">Support</a></li>
+                </ul>
+            </div>
         </div>
         <img class='picture1'src="images/homeworkpicture.jpg" alt="homework picture">
         <h1 class="animation">Welcome</h1>
+        <div class='footer-container'>
+            <div class='footer'>
+                <div class='footer-heading footer-1'>
+                    <h2> Contacts </h2>
+                    <a href="#">Phone: 626-525-9722</a>
+                    <a href="#">Email: gavinlai07@gmail.com</a>
+                    <a href="#">Snapchat: gavinlai999</a>
+                </div>
+                <div class='footer-heading footer-2'>
+                    <h2>Social Media</h2>
+                    <a href='https://www.instagram.com/gavinlai999/'>Instagram</a>
+                    <a href="https://www.facebook.com/gavin.lai.7399">Facebook</a>
+                    <a href="https://www.tiktok.com/@gavinlai999">TikTok</a>
+                </div>
+            </div>
+        </div>
+    </div>
     </body>
 </html>
