--- a/Window/createscreen/create.html
+++ b/Window/createscreen/create.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="create.css">
     </head>
     <body>
-        <div>
+        <div class="navbarandtitlecontainer2">
             <div class="navbar2">
                 <ul>
                     <h1 class='title'>Create Your Homework Schedule!</h1>
