--- a/Window/supportscreen/support.html
+++ b/Window/supportscreen/support.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="support.css">
     </head>
     <body>
-        <div>
+        <div class="navbarandtitlecontainer3">
             <div class="navbar3">
                 <ul>
                     <h1 class="title">Support Us</h1>
