--- a/Window/createscreen/create.html
+++ b/Window/createscreen/create.html
@@ -10,8 +10,8 @@
                 <ul>
                     <h1 class='title'>Create Your Homework Schedule!</h1>
                     <li><a onclick = "window.location.href='/Window/homescreen/home.html'">Home</a></li>
-                    <li><a onclick = "window.location.href= 'http://127.0.0.1:5500/Window/createscreen/create.html'">Create</a></li>
-                    <li><a onclick = "window.location.href='http://127.0.0.1:5500/Window/supportscreen/support.html'">Support</a></li>
+                    <li><a onclick = "window.location.href= 'Window/createscreen/create.html'">Create</a></li>
+                    <li><a onclick = "window.location.href='Window/supportscreen/support.html'">Support</a></li>
                 </ul>
             </div>
         </div>
