--- a/Window/createscreen/create.html
+++ b/Window/createscreen/create.html
@@ -9,9 +9,9 @@
             <div class="navbar2">
                 <ul>
                     <h1 class='title'>Create Your Homework Schedule!</h1>
-                    <li><a onclick = "window.location.href='Window/homescreen/home.html'">Home</a></li>
-                    <li><a onclick = "window.location.href= 'Window/createscreen/create.html'">Create</a></li>
-                    <li><a onclick = "window.location.href='Window/supportscreen/support.html'">Support</a></li>
+                    <li><a onclick = "window.location.href='/homescreen/home.html'">Home</a></li>
+                    <li><a onclick = "window.location.href= '/createscreen/create.html'">Create</a></li>
+                    <li><a onclick = "window.location.href='/supportscreen/support.html'">Support</a></li>
                 </ul>
             </div>
         </div>
@@ -105,6 +105,5 @@
     </div>
 <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-<script src="server.js"></script>
     </body>
 </html>
