--- a/Window/supportscreen/support.html
+++ b/Window/supportscreen/support.html
@@ -9,9 +9,9 @@
             <div class="navbar3">
                 <ul>
                     <h1 class="title">Support Us</h1>
-                    <li><a onclick = "window.location.href='/homescreen/home.html'">Home</a></li>
-                    <li><a onclick = "window.location.href= '/createscreen/create.html'">Create</a></li>
-                    <li><a onclick = "window.location.href='/supportscreen/support.html'">Support</a></li>
+                    <li><a onclick = "window.location.href='homescreen/home.html'">Home</a></li>
+                    <li><a onclick = "window.location.href= 'createscreen/create.html'">Create</a></li>
+                    <li><a onclick = "window.location.href='supportscreen/support.html'">Support</a></li>
                 </ul>
             </div>
         </div>
