--- a/Window/homescreen/home.html
+++ b/Window/homescreen/home.html
@@ -9,9 +9,9 @@
             <div class="navbar">
                 <ul>
                     <h1 class="title">HW Helper</h1>
-                    <li><a href='homescreen/home.html'>Home</a></li>
-                    <li><a href= 'createscreen/create.html'>Create</a></li>
-                    <li><a href='supportscreen/support.html'>Support</a></li>
+                    <li><a href='/Window/homescreen/home.html'>Home</a></li>
+                    <li><a href= '/Window/createscreen/create.html'>Create</a></li>
+                    <li><a href='/Window/supportscreen/support.html'>Support</a></li>
                 </ul>
             </div>
         </div>
