--- a/Window/createscreen/create.html
+++ b/Window/createscreen/create.html
@@ -9,9 +9,9 @@
             <div class="navbar2">
                 <ul>
                     <h1 class='title'>Create Your Homework Schedule!</h1>
-                    <li><a href='/Window/homescreen/home.html'>Home</a></li>
-                    <li><a href= '/Window/createscreen/create.html'>Create</a></li>
-                    <li><a href='/Window/supportscreen/support.html'>Support</a></li>
+                    <li><a onclick="window.location.href='/Window/homescreen/home.html'">Home</a></li>
+                    <li><a onclick="window.location.href= '/Window/createscreen/create.html'">Create</a></li>
+                    <li><a onclick="window.location.href='/Window/supportscreen/support.html'">Support</a></li>
                 </ul>
             </div>
         </div>
