--- a/Window/createscreen/create.html
+++ b/Window/createscreen/create.html
@@ -53,7 +53,7 @@
                   </div>
                   <br>
                 </div>
-                <button id="timerbutton">Set Alarm</button>
+                <button id="timerbutton">Set Due Date</button>
               </div>
             </div>
                 <br>
