--- a/Window/createscreen/create.html
+++ b/Window/createscreen/create.html
@@ -11,6 +11,7 @@
                     <h1 class='title'>Create Your Homework Schedule!</h1>
                     <li><a onclick="window.location.href='http://127.0.0.1:5500/Window/homescreen/home.html'">Home</a></li>
                     <li><a onclick="window.location.href= 'http://127.0.0.1:5500/Window/createscreen/create.html'">Create</a></li>
+                    <li><a onclick="window.location.href='http://127.0.0.1:5500/Window/toolscreen/tool.html'">Tool</a></li>
                     <li><a class='supportbutton'onclick="window.location.href='http://127.0.0.1:5500/Window/supportscreen/support.html'">Support</a></li>
                 </ul>
             </div>
@@ -32,7 +33,7 @@
         <div class="wrapperbody">
             <div class="wrapper">
                 <img src="images/alarmclock.gif" alt="clock">
-                <h1 id="timetext">00:00:00 PM</h1>
+                <h1 class='timertext'id="timetext">00:00:00 PM</h1>
                 <div class="content">
                   <div class="column">
                     <select>
