--- a/Window/toolscreen/tool.html
+++ b/Window/toolscreen/tool.html
@@ -17,8 +17,10 @@
                     <li><a onclick="window.location.href='http://127.0.0.1:5500/Window/supportscreen/support.html'">Support</a></li>
                 </ul>
             </div>
+            <br>
             <div class="calculatorbody">
                 <div class="container">
+                    <h3 class="calculatorheader">Calculator(Math)</h3>
                     <div class="calculator">
                       <input type="text" id="inputBox" placeholder="0" />
                       <div>
