--- a/Window/createscreen/create.html
+++ b/Window/createscreen/create.html
@@ -21,6 +21,8 @@
         <div class="container">
             <div class="hw-list">
                 <h2>HW List <img src="images/hwpic.png" alt="hwpic"></h2>
+                <p class="exampletext">Ex: Math pg 1-5 #1-35 odd only</p>
+                <br>
                 <div class="row">
                     <input type="text" id="input-box" placeholder="Add Homework">
                     <button onclick="addHw()"class="addbutton">Add</button>
