--- a/Window/toolscreen/tool.html
+++ b/Window/toolscreen/tool.html
@@ -5,9 +5,11 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <link rel="stylesheet" href="tool.css">
+         <!--Link Below is from bootstrap for word counter-->
+                  
     </head>
     <body>
-        <div class="navbarandtitlecontainer3">
+        <div class="navbarandtitlecontainer4">
             <div class="navbar4">
                 <ul>
                     <h1 class="title">Homework Tools</h1>
@@ -16,6 +18,7 @@
                     <li><a onclick="window.location.href='http://127.0.0.1:5500/Window/toolscreen/tool.html'">Tool</a></li>
                     <li><a onclick="window.location.href='http://127.0.0.1:5500/Window/supportscreen/support.html'">Support</a></li>
                 </ul>
+            </div>
             </div>
             <br>
             <div class="calculatorbody">
@@ -59,6 +62,39 @@
                 <br>
                 <br>
                 </div>
+                <div class="wordcounterwrapper">
+                  <div class="wordcontainer">
+                    <h3 class="wordcountertitle">Word Counter(English)</h3>
+                    <p class="wordcounterdirections">Copy and Paste your Essay/Quickwrite into the textbox</p>
+                    <textarea id="wordcounter-textarea"  class='wordcountertextarea'rows="12" placeholder="Copy and Paste Your Essay/QuickWrite Here"></textarea>
+                  </div>
+                  <br>
+                  <br>
+                  <br>  
+                  <div class="counterboxarea">
+                    <div class="counter">
+                      <div>
+                        <h5 id="word-counter">0</h5>
+                        <p>Words</p>
+                      </div>
+                      <div>
+                        <h5 id="character-counter">0</h5>
+                        <p>Characters</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <br>
+                <br>
+                <br>  
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
                 <div class='footer-container'>
                     <div class='footer'>
                         <div class='footer-heading footer-1'>
