--- a/Window/createscreen/create.html
+++ b/Window/createscreen/create.html
@@ -9,10 +9,12 @@
             <div class="navbar2">
                 <ul>
                     <h1 class='title'>Create Your Homework Schedule!</h1>
-                    <li><a onclick="window.location.href='http://127.0.0.1:5500/Window/homescreen/home.html'">Home</a></li>
-                    <li><a onclick="window.location.href= 'http://127.0.0.1:5500/Window/createscreen/create.html'">Create</a></li>
-                    <li><a onclick="window.location.href='http://127.0.0.1:5500/Window/toolscreen/tool.html'">Tool</a></li>
-                    <li><a class='supportbutton'onclick="window.location.href='http://127.0.0.1:5500/Window/supportscreen/support.html'">Support</a></li>
+                    <div>
+                      <li><a class="homebutton2" onclick="window.location.href='http://127.0.0.1:5500/Window/homescreen/home.html'">Home</a></li>
+                    <li><a class="createbutton2"onclick="window.location.href= 'http://127.0.0.1:5500/Window/createscreen/create.html'">Create</a></li>
+                    <li><a class="toolbutton2"onclick="window.location.href='http://127.0.0.1:5500/Window/toolscreen/tool.html'">Tool</a></li>
+                    <li><a class="supportbutton2" onclick="window.location.href='http://127.0.0.1:5500/Window/supportscreen/support.html'">Support</a></li>
+                    </div>
                 </ul>
             </div>
         </div>
