--- a/Window/toolscreen/tool.html
+++ b/Window/toolscreen/tool.html
@@ -13,10 +13,12 @@
             <div class="navbar4">
                 <ul>
                     <h1 class="title">Homework Tools</h1>
-                    <li><a onclick="window.location.href='http://127.0.0.1:5500/Window/homescreen/home.html'">Home</a></li>
-                    <li><a onclick="window.location.href= 'http://127.0.0.1:5500/Window/createscreen/create.html'">Create</a></li>
-                    <li><a onclick="window.location.href='http://127.0.0.1:5500/Window/toolscreen/tool.html'">Tool</a></li>
-                    <li><a onclick="window.location.href='http://127.0.0.1:5500/Window/supportscreen/support.html'">Support</a></li>
+                    <div>
+                    <li><a class="homebutton4" onclick="window.location.href='http://127.0.0.1:5500/Window/homescreen/home.html'">Home</a></li>
+                    <li><a class="createbutton4"onclick="window.location.href= 'http://127.0.0.1:5500/Window/createscreen/create.html'">Create</a></li>
+                    <li><a class="toolbutton4"onclick="window.location.href='http://127.0.0.1:5500/Window/toolscreen/tool.html'">Tool</a></li>
+                    <li><a class="supportbutton4"onclick="window.location.href='http://127.0.0.1:5500/Window/supportscreen/support.html'">Support</a></li>
+                    </div>
                 </ul>
             </div>
             </div>
@@ -62,7 +64,6 @@
                 <img class="conversionpic" src="images/conversions.png" alt="conversion picture">
               </div>
             </div>
-                <br>
                 <br>
                 </div>
                 <div class="wordcounterwrapper">
