--- a/Window/supportscreen/support.html
+++ b/Window/supportscreen/support.html
@@ -11,10 +11,12 @@
             <div class="navbar3">
                 <ul>
                     <h1 class="title">Support Us</h1>
-                    <li><a onclick="window.location.href='http://127.0.0.1:5500/Window/homescreen/home.html'">Home</a></li>
-                    <li><a onclick="window.location.href= 'http://127.0.0.1:5500/Window/createscreen/create.html'">Create</a></li>
-                    <li><a onclick="window.location.href='http://127.0.0.1:5500/Window/toolscreen/tool.html'">Tool</a></li>
-                    <li><a onclick="window.location.href='http://127.0.0.1:5500/Window/supportscreen/support.html'">Support</a></li>
+                    <div>
+                    <li><a class="homebutton3" onclick="window.location.href='http://127.0.0.1:5500/Window/homescreen/home.html'">Home</a></li>
+                    <li><a class="createbutton3"onclick="window.location.href= 'http://127.0.0.1:5500/Window/createscreen/create.html'">Create</a></li>
+                    <li><a class="toolbutton3"onclick="window.location.href='http://127.0.0.1:5500/Window/toolscreen/tool.html'">Tool</a></li>
+                    <li><a class="supportbutton3"onclick="window.location.href='http://127.0.0.1:5500/Window/supportscreen/support.html'">Support</a></li>
+                    </div>
                 </ul>
             </div>
         </div>
