--- a/Window/supportscreen/support.html
+++ b/Window/supportscreen/support.html
@@ -26,6 +26,7 @@
                     <h1 class="contactheader">Contact Me!</h1>
                     <h3 class="secondarycontactheader">Suggest Improvements/Feedback</h3>
                     <p class="contactparagraphtext">Ex: Create more homework tools</p>
+                    <!--Form that user can fill to email me about suggestions to improve website-->
                     <form class="contactform" action="https://formsubmit.co/32f2f83c3316898d54e0974705d99ec4" method="POST">
                         <input type="text" name="Name" placeholder="Full Name" required>
                         <input type="text" name="Email" placeholder="Email" required>
