--- a/Window/homescreen/home.html
+++ b/Window/homescreen/home.html
@@ -18,7 +18,7 @@
                 </ul>
             </div>
         </div>
-        <img class='picture1'src="images/homeworkpicture.jpg" alt="homework picture">
+        <img class='picture1'src="images/home.jpg" alt="homework picture">
         <h1 class="animation">Welcome</h1>
         <div class='footer-container'>
             <div class='footer'>
