--- a/Window/createscreen/create.html
+++ b/Window/createscreen/create.html
@@ -10,10 +10,10 @@
                 <ul>
                     <h1 class='title'>Create Your Homework Schedule!</h1>
                     <div>
-                    <li><a class="homebutton2" onclick="window.location.href='http://127.0.0.1:5500/Window/homescreen/home.html'">Home</a></li>
-                    <li><a class="createbutton2"onclick="window.location.href= 'http://127.0.0.1:5500/Window/createscreen/create.html'">Create</a></li>
-                    <li><a class="toolbutton2"onclick="window.location.href='http://127.0.0.1:5500/Window/toolscreen/tool.html'">Tool</a></li>
-                    <li><a class="supportbutton2" onclick="window.location.href='http://127.0.0.1:5500/Window/supportscreen/support.html'">Support</a></li>
+                    <li><a href="../homescreen/home.html">Home</a></li>
+                    <li><a href="./create.html">Create</a></li>
+                    <li><a href="../toolscreen/tool.html">Tool</a></li>
+                    <li><a href="../supportscreen/support.html">Support</a></li>
                     </div>
                 </ul>
             </div>
