--- a/Window/toolscreen/tool.html
+++ b/Window/toolscreen/tool.html
@@ -5,8 +5,6 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <link rel="stylesheet" href="tool.css">
-         <!--Link Below is from bootstrap for word counter-->
-                  
     </head>
     <body>
         <div class="navbarandtitlecontainer4">
@@ -14,108 +12,105 @@
                 <ul>
                     <h1 class="title">Homework Tools</h1>
                     <div>
-                    <li><a class="homebutton4" onclick="window.location.href='http://127.0.0.1:5500/Window/homescreen/home.html'">Home</a></li>
-                    <li><a class="createbutton4"onclick="window.location.href= 'http://127.0.0.1:5500/Window/createscreen/create.html'">Create</a></li>
-                    <li><a class="toolbutton4"onclick="window.location.href='http://127.0.0.1:5500/Window/toolscreen/tool.html'">Tool</a></li>
-                    <li><a class="supportbutton4"onclick="window.location.href='http://127.0.0.1:5500/Window/supportscreen/support.html'">Support</a></li>
+                        <li><a href="../homescreen/home.html">Home</a></li>
+                        <li><a href="../createscreen/create.html">Create</a></li>
+                        <li><a href="./tool.html">Tool</a></li>
+                        <li><a href="../supportscreen/support.html">Support</a></li>
                     </div>
                 </ul>
             </div>
-            </div>
-            <br>
-            <div class="calculatorbody">
-              <div class="calculator-container">
+        </div>
+        <br>
+        <div class="calculatorbody">
+            <div class="calculator-container">
                 <h3 class="calculatorheader">Calculator(Math)</h3>
                 <div class="calculator">
-                  <input type="text" id="inputBox" placeholder="0" />
+                    <input type="text" id="inputBox" placeholder="0" />
                     <div>
-                      <button class="button operator">AC</button>
-                      <button class="button operator">DEL</button>
-                      <button class="button operator">%</button>
-                      <button class="button operator">/</button>
+                        <button class="button operator">AC</button>
+                        <button class="button operator">DEL</button>
+                        <button class="button operator">%</button>
+                        <button class="button operator">/</button>
                     </div>
                     <div>
-                      <button class="button">7</button>
-                      <button class="button">8</button>
-                      <button class="button">9</button>
-                      <button class="button operator">*</button>
+                        <button class="button">7</button>
+                        <button class="button">8</button>
+                        <button class="button">9</button>
+                        <button class="button operator">*</button>
                     </div>
                     <div>
-                      <button class="button">4</button>
-                      <button class="button">5</button>
-                      <button class="button">6</button>
-                      <button class="button operator">-</button>
+                        <button class="button">4</button>
+                        <button class="button">5</button>
+                        <button class="button">6</button>
+                        <button class="button operator">-</button>
                     </div>
                     <div>
-                      <button class="button">1</button>
-                      <button class="button">2</button>
-                      <button class="button">3</button>
-                      <button class="button operator">+</button>
+                        <button class="button">1</button>
+                        <button class="button">2</button>
+                        <button class="button">3</button>
+                        <button class="button operator">+</button>
                     </div>
                     <div>
-                      <button class="button">00</button>
-                      <button class="button">0</button>
-                      <button class="button">.</button>
-                      <button class="button equalbutton">=</button>
+                        <button class="button">00</button>
+                        <button class="button">0</button>
+                        <button class="button">.</button>
+                        <button class="button equalbutton">=</button>
                     </div>
                 </div>
-              </div>
-              <div class="conversion-container">
-                <img class="conversionpic" src="images/conversions.png" alt="conversion picture">
-              </div>
             </div>
-                <br>
-                </div>
-                <div class="wordcounterwrapper">
-                  <div class="wordcontainer">
-                    <h3 class="wordcountertitle">Word Counter(English)</h3>
-                    <p class="wordcounterdirections">Copy and Paste your Essay/Quickwrite into the textbox</p>
-                    <textarea id="wordcounter-textarea"  class='wordcountertextarea'rows="12" placeholder="Copy and Paste Your Essay/QuickWrite Here"></textarea>
-                  </div>
-                  <br>
-                  <br>
-                  <br>  
-                  <div class="counterboxarea">
-                    <div class="counter">
-                      <div>
+            <div class="conversion-container">
+                <img class="conversionpic" src="images/conversions.png" alt="conversion picture">
+            </div>
+        </div>
+        <br>
+        <div class="wordcounterwrapper">
+            <div class="wordcontainer">
+                <h3 class="wordcountertitle">Word Counter(English)</h3>
+                <p class="wordcounterdirections">Copy and Paste your Essay/Quickwrite into the textbox</p>
+                <textarea id="wordcounter-textarea" class="wordcountertextarea" rows="12" placeholder="Copy and Paste Your Essay/QuickWrite Here"></textarea>
+            </div>
+            <br>
+            <br>
+            <br>  
+            <div class="counterboxarea">
+                <div class="counter">
+                    <div>
                         <h5 id="word-counter">0</h5>
                         <p>Words</p>
-                      </div>
-                      <div>
+                    </div>
+                    <div>
                         <h5 id="character-counter">0</h5>
                         <p>Characters</p>
-                      </div>
                     </div>
-                  </div>
-                </div>
-                <br>
-                <br>
-                <br>  
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <div class='footer-container'>
-                    <div class='footer'>
-                        <div class='footer-heading footer-1'>
-                            <h2> Contacts </h2>
-                            <a href="#">Email: gavinlai07@gmail.com</a>
-                            <a href="#">Snapchat: gavinlai999</a>
-                        </div>
-                        <div class='footer-heading footer-2'>
-                            <h2>Social Media</h2>
-                            <a href='https://www.instagram.com/gavinlai999/'>Instagram</a>
-                            <a href="https://www.facebook.com/gavin.lai.7399">Facebook</a>
-                            <a href="https://www.tiktok.com/@gavinlai999">TikTok</a>
-                        </div>
                 </div>
             </div>
+        </div>
+        <br>
+        <br>
+        <br>  
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <div class='footer-container'>
+            <div class='footer'>
+                <div class='footer-heading footer-1'>
+                    <h2> Contacts </h2>
+                    <a href="#">Email: gavinlai07@gmail.com</a>
+                    <a href="#">Snapchat: gavinlai999</a>
+                </div>
+                <div class='footer-heading footer-2'>
+                    <h2>Social Media</h2>
+                    <a href='https://www.instagram.com/gavinlai999/'>Instagram</a>
+                    <a href="https://www.facebook.com/gavin.lai.7399">Facebook</a>
+                    <a href="https://www.tiktok.com/@gavinlai999">TikTok</a>
+                </div>
             </div>
-            <div>
+        </div>
         <script src="tool.js"></script>
     </body>
 </html>
