--- a/Window/supportscreen/support.html
+++ b/Window/supportscreen/support.html
@@ -12,10 +12,10 @@
                 <ul>
                     <h1 class="title">Support Us</h1>
                     <div>
-                    <li><a class="homebutton3" onclick="window.location.href='http://127.0.0.1:5500/Window/homescreen/home.html'">Home</a></li>
-                    <li><a class="createbutton3"onclick="window.location.href= 'http://127.0.0.1:5500/Window/createscreen/create.html'">Create</a></li>
-                    <li><a class="toolbutton3"onclick="window.location.href='http://127.0.0.1:5500/Window/toolscreen/tool.html'">Tool</a></li>
-                    <li><a class="supportbutton3"onclick="window.location.href='http://127.0.0.1:5500/Window/supportscreen/support.html'">Support</a></li>
+                        <li><a href="../homescreen/home.html">Home</a></li>
+                        <li><a href="../createscreen/create.html">Create</a></li>
+                        <li><a href="../toolscreen/tool.html">Tool</a></li>
+                        <li><a href="./support.html">Support</a></li>
                     </div>
                 </ul>
             </div>
